# gls-rs

./: .gitignore  Cargo.toml  README.md  build.rs  target-runner.sh
.cargo/: hi3559av100-static.toml  hi3559av100.toml
examples/: egl-basic.rs  egl-texture.rs  egl-triangle.rs  sdl2-basic.rs  sdl2-texture.rs  sdl2-triangle.rs
examples/images/: cube-map-400x300.data
examples/shaders/: colored.frag  colored.vert  textured.frag  textured.vert
src/: apis.rs  auto_binder.rs  buffer.rs  clear_buffers.rs  clip_rect.rs  color_buffer.rs  error.rs  framebuffer.rs  gl.rs  lib.rs  shader.rs  so.rs  texture.rs  variant.rs  viewport.rs
src/prelude/: mod.rs
