[package]
name = "glplus"
version = "0.14.0"
authors = ["Varphone Wong <varphone@qq.com>"]
keywords = ["graphics"]
description = "Open Graphics Library (OpenGL) for Rust bindings"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/varphone/glplus-rs.git"
homepage = "https://github.com/varphone/glplus-rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "~0.2"

[build-dependencies]
gl_generator = "0.14.0"

[features]
default = [ "gles3" ]
gl2 = []
gl3 = []
gl4 = []
gles1 = []
gles2 = []
gles3 = []
hi3516ev200 = []
hi3516ev300 = []
hi3518ev200 = []
hi3518ev300 = []
hi3519av100 = []
hi3531v100 = []
hi3559av100 = []
